# ats_score_resume

./: .gitignore  README.md  app.py  pyproject.toml
docs/: DECISOES.md  METRICAS_ATS.md  PLANEJAMENTO.md
src/ats_score_resume/: __init__.py  ai_optimizer.py  app.py  comparison.py  document_parser.py  exporters.py  job_source.py  optimizer.py  scoring.py  text_utils.py
tests/: test_comparison.py  test_optimizer.py  test_scoring.py
